--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
+html {
+    height: 100%;
+  }
+  
+  body {
+    background: var(--cg-grey);
+    position: relative;
+    min-height: 100vh;
+    padding: 0;
+    margin: 0;
+    font-family: monospace;
+  }
+  
+
 .navbar {
     position: -webkit-sticky;
     position: sticky;
@@ -11,7 +25,7 @@
     align-items: center;
     text-align: center;
   
-    background-color: var(--cg-black);
+    background-color: #d3dbbb;
     color: var(--cg-white);
     padding: 0px 0px;
   
@@ -86,4 +100,73 @@
     height: 2.5rem;
   }
 
+  .about {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #f0f3e8;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+  }
   
+  .about-pic img {
+    max-width: 300px;
+    border-radius: 3px;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); */
+  }
+  
+  .about-text {
+    flex: 1;
+    margin-left: 20px;
+  }
+  
+  .about-text h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .about-text p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  main {
+    padding: 0 20px 40px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+
+.resume-title{
+    text-align: center;
+}
+
+ .skill-list, .course-list{
+    list-style-type: none;
+ }
+
+
+ .button {
+    background-color: var(--cg-black);
+    border: none;
+    color: var(--cg-white);
+  
+    font-family: monospace;
+  
+    padding: 5px 7px;
+    text-align: center;
+  
+    border-radius: 2px;
+  }
+  
+  .button:hover {
+    background-color: var(--cg-blue);
+  }
+  
+  .resume h2 {
+    font-family: Georgia;
+  }
